# Wolt2024

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
src/: main.py
src/models/: order.py
src/services/: order_fee_calculator.py  order_instance.py
src/tests/: feecalculator_test.py  test_main.py  test_order_fee_calculator.py
