[tool.poetry]
name = "wolt-2024"
version = "0.1.0"
description = ""
authors = ["Kalle Hahl <kalle.hahl@hotmail.com>"]
readme = "README.md"
packages = [{include = "wolt_2024"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
