[tool.poetry]
name = "wolt-2024"
version = "0.1.0"
description = ""
authors = ["Kalle Hahl <kalle.hahl@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
